Fix button spacing on activities.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,3 +26,7 @@
 .align-middle {
   margin-top: 20px;
 }
+
+.button-spacing {
+  margin-left: 10px;
+}
